promo+header сделано

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,8 @@
 @import 'libs/bootstrap-reboot.min';
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -11,3 +14,7 @@
 .container {
     
 }
+
+@import 'blocks/keyframes';
+@import 'blocks/promo';
+@import 'blocks/header';
