--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,39 +1,42 @@
 .header {
     width: 100%;
-    height: 65px;
+    height: 60px;
     // background: linear-gradient(0deg, rgb(255, 255, 255) 50%, rgb(229, 229, 229));
-    // box-shadow: 0px 10px 10px 12px #ffffff;
-    background-color: rgba(240, 255, 255, 0.7);
+    box-shadow: 0px 3px 3px 3px rgba(240, 255, 255, 0.8);
+    background-color: rgba(240, 255, 255, 0.8);
     position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     &__logo {
-        width: 50%;
+        width: 30%;
         height: inherit;
         display: flex;
         justify-content: start;
         align-items: center;
+
         &-img {
             margin-left: 20px;
             height: 80%;
             border: 2px solid black;
             border-radius: 100%;
         }
+
         &-text {
             padding-left: 20px;
-            font-size: 42px;
+            font-size: 46px;
             font-family: 'Rubik Dirt';
         }
     }
 
     &__items {
-        
-        width: 50%;
+
+        width: 70%;
         display: flex;
         justify-content: space-around;
         align-items: center;
+
         &-item {
             a {
                 font-family: 'Rubik Dirt';
@@ -44,6 +47,21 @@
                 color: black;
 
             }
+        }
+    }
+
+    &__hamburger {
+        display: none;
+        visibility: hidden;
+        width: 35px;
+        height: 30px;
+        margin-right: 20px;
+
+        span {
+            margin-top: 5px;
+            width: 100%;
+            height: 10px;
+            background-color: black;
         }
     }
 
