--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -1,26 +1,31 @@
 @keyframes showBackground {
     0% {
         background-image: url("../img/interier/main1.jpg");
-        
+
     }
+
     33% {
         background-image: url("../img/interier/main1.jpg");
-        
+
     }
+
     66% {
-        background-image: url("../img/interier/main2.jpeg");
+        background-image: url("../img/interier/main5.jpg");
     }
+
     100% {
-        background-image: url("../img/interier/main2.jpeg");
+        background-image: url("../img/interier/main5.jpg");
     }
 }
+
 @keyframes scroll {
     0% {
         transform: translateY(0px);
         opacity: 0.2;
     }
+
     50% {
-        
+
         opacity: 1;
     }
 
