--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -2,12 +2,13 @@
     width: 100%;
     height: 60px;
     // background: linear-gradient(0deg, rgb(255, 255, 255) 50%, rgb(229, 229, 229));
-    box-shadow: 0px 3px 3px 3px rgba(240, 255, 255, 0.8);
-    background-color: rgba(240, 255, 255, 0.8);
+    // box-shadow: 0px 3px 3px 3px rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 6;
 
     &__logo {
         width: 30%;
@@ -19,7 +20,7 @@
         &-img {
             margin-left: 20px;
             height: 80%;
-            border: 2px solid black;
+            // border: 2px solid rgb(255, 255, 255);
             border-radius: 100%;
         }
 
@@ -27,6 +28,7 @@
             padding-left: 20px;
             font-size: 46px;
             font-family: 'Rubik Dirt';
+            color: white;
         }
     }
 
@@ -44,7 +46,7 @@
                 font-size: 20px;
                 text-transform: uppercase;
                 text-decoration: none;
-                color: black;
+                color: rgb(255, 255, 255);
 
             }
         }
