--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,4 +1,6 @@
 .promo {
+    position: relative;
+    // box-shadow: 0 10px 5px rgb(59, 59, 59);
     width: 100%;
     height: 100vh;
     // background: url("../img/interier/main1.jpg");
@@ -6,7 +8,8 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-size: cover;
-    animation: showBackground 14s ease infinite alternate;
+    animation: showBackground 18s ease infinite alternate;
+    box-shadow: 0px 10px 15px rgba(239, 240, 185, 0.9);
 
     .icon-scroll {
         width: 20px;
@@ -34,5 +37,17 @@
             animation-iteration-count: infinite;
             animation-name: scroll;
         }
+    }
+
+    &__goodMorning {
+        width: 40%;
+        position: absolute;
+        z-index: 5;
+        color: rgb(226, 217, 95);
+        top: 150px;
+        right: 20px;
+        font-size: 40px;
+        font-weight: 500;
+        text-shadow: 1px 2px 3px rgb(226, 217, 95);
     }
 }
