--- a/src/sass/blocks/_description.scss
+++ b/src/sass/blocks/_description.scss
@@ -1,9 +1,9 @@
 .description {
     height: 400px;
-    background-image: url('../img/interier/brick2.jpg');
+    background: url('../img/interier/concrete3.jpg') no-repeat 100%/cover;
     box-shadow: 0px 23px 20px 25px rgba(239, 240, 185, 0.2) inset;
     h2 {
-        color:azure;
+        color:rgb(0, 0, 0);
         text-align: center;
         padding-top: 40px;
         font-size: 40px;
