--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -40,14 +40,29 @@
     }
 
     &__goodMorning {
+        font-family: 'Roboto';
+        font-weight: 300;
         width: 40%;
         position: absolute;
         z-index: 5;
-        color: rgb(226, 217, 95);
+        color: rgb(63, 62, 61);
         top: 150px;
-        right: 20px;
+        left: 120px;
         font-size: 40px;
-        font-weight: 500;
-        text-shadow: 1px 2px 3px rgb(226, 217, 95);
+
+        // text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+        &-hello {
+            font-family: 'Roboto';
+            font-weight: 300;
+            text-transform: uppercase;
+            font-size: 65px;
+        }
+
+        &-text {
+            font-family: 'Roboto';
+            font-weight: 300;
+            // text-transform: lowercase;
+            font-size: 35px;
+        }
     }
 }
