--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -1,20 +1,20 @@
 @keyframes showBackground {
     0% {
-        background-image: url("../img/interier/main3.jpg");
+        background-image: url("../img/interier/main1.jpg");
 
     }
 
     33% {
-        background-image: url("../img/interier/main3.jpg");
+        background-image: url("../img/interier/main1.jpg");
 
     }
 
     66% {
-        background-image: url("../img/interier/main5.jpg");
+        background-image: url("../img/food/1.jpg");
     }
 
     100% {
-        background-image: url("../img/interier/main5.jpg");
+        background-image: url("../img/food/1.jpg");
     }
 }
 
