--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,15 +1,84 @@
 @import 'libs/bootstrap-reboot.min';
 
+@import 'base/variables';
+@import 'base/mixins';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Marmelad&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Marmelad&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 
+
+@font-face {
+    font-family: 'Core Sans';
+    src: url('../fonts/CoreSansC-65Bold.eot');
+    src: local('Core Sans C 65 Bold'), local('CoreSansC-65Bold'),
+        url('../fonts/CoreSansC-65Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CoreSansC-65Bold.woff2') format('woff2'),
+        url('../fonts/CoreSansC-65Bold.woff') format('woff'),
+        url('../fonts/CoreSansC-65Bold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: 'Core Sans';
+    src: url('../fonts/CoreSansC-55Medium.eot');
+    src: local('Core Sans C 55 Medium'), local('CoreSansC-55Medium'),
+        url('../fonts/CoreSansC-55Medium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CoreSansC-55Medium.woff2') format('woff2'),
+        url('../fonts/CoreSansC-55Medium.woff') format('woff'),
+        url('../fonts/CoreSansC-55Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Core Sans';
+    src: url('../fonts/CoreSansC-25ExtraLight.eot');
+    src: local('Core Sans C 25 ExtraLight'), local('CoreSansC-25ExtraLight'),
+        url('../fonts/CoreSansC-25ExtraLight.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CoreSansC-25ExtraLight.woff2') format('woff2'),
+        url('../fonts/CoreSansC-25ExtraLight.woff') format('woff'),
+        url('../fonts/CoreSansC-25ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: 'Core Sans';
+    src: url('../fonts/CoreSansC-35Light.eot');
+    src: local('Core Sans C 35 Light'), local('CoreSansC-35Light'),
+        url('../fonts/CoreSansC-35Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CoreSansC-35Light.woff2') format('woff2'),
+        url('../fonts/CoreSansC-35Light.woff') format('woff'),
+        url('../fonts/CoreSansC-35Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: 'Core Sans';
+    src: url('../fonts/CoreSansC-45Regular.eot');
+    src: local('Core Sans C 45 Regular'), local('CoreSansC-45Regular'),
+        url('../fonts/CoreSansC-45Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/CoreSansC-45Regular.woff2') format('woff2'),
+        url('../fonts/CoreSansC-45Regular.woff') format('woff'),
+        url('../fonts/CoreSansC-45Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Core Sans', sans-serif;
     margin: 0;
     padding: 0;
     
@@ -17,8 +86,11 @@
 
 
 .container {
-    width: 1140px;
+    width: 1240px;
+    margin: 0 auto;
+    position: relative
 }
+
 
 @import 'blocks/keyframes';
 @import 'blocks/promo';
