--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -55,6 +55,22 @@
     &__hamburger {
         display: none;
         visibility: hidden;
+        position: absolute;
+        width: 35px;
+        height: 20px;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 11;
+
+        span {
+            display: block;
+            height: 2px;
+            width: 100%;
+            background-color: #fff;
+            margin-bottom: 5px;
+            transition: 0.3s all;
+        }
 
     }
 
