--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -42,12 +42,17 @@
         &__hamburger {
             display: block;
             visibility: visible;
-
-            span {
-                margin-top: 5px;
-                width: 100%;
-                height: 10px;
-                background-color: black;
+        }
+    }
+    .promo {
+        animation: showBackgroundMobile 18s ease infinite alternate;
+        &__goodMorning {
+            width: 80%;
+            &-hello {
+                font-size: 24px;
+            }
+            &-text {
+                font-size: 16px;
             }
         }
     }
