--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -40,29 +40,33 @@
     }
 
     &__goodMorning {
-        font-family: 'Roboto';
         font-weight: 300;
         width: 40%;
         position: absolute;
         z-index: 5;
-        color: rgb(240, 240, 240);
+        color: azure;
         top: 100px;
         left: 80px;
-        font-size: 40px;
+        border: none;
+        border-radius: 50%;
+        // background-color: rgba(0, 0, 0, 0.4);
+        // box-shadow: -20px -20px 20px 20px rgba(0, 0, 0, 0.3), 20px 20px 20px 20px rgba(0, 0, 0, 0.3);
+
 
         // text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
         &-hello {
-            font-family: 'Roboto';
-            font-weight: 400;
+            font-weight: 500;
             text-transform: uppercase;
             font-size: 65px;
+            text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9);
+
         }
 
         &-text {
-            font-family: 'Roboto';
-            font-weight: 300;
+            font-weight: 400;
             // text-transform: lowercase;
             font-size: 35px;
+            text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9);
         }
     }
 }
