--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -22,6 +22,7 @@
             height: 80%;
             // border: 2px solid rgb(255, 255, 255);
             border-radius: 100%;
+            box-shadow: -2px -2px 4px azure, 2px 2px 3px azure, 2px -2px 3px azure, -2px 2px 3px azure;
         }
 
         &-text {
@@ -33,7 +34,6 @@
     }
 
     &__items {
-
         width: 70%;
         display: flex;
         justify-content: space-around;
@@ -51,6 +51,8 @@
             }
         }
     }
+
+
 
     &__hamburger {
         display: none;
@@ -70,6 +72,38 @@
             background-color: #fff;
             margin-bottom: 5px;
             transition: 0.3s all;
+        }
+
+        &-active {
+            position: absolute;
+            width: 35px;
+            height: 20px;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 11;
+
+            span {
+                display: block;
+                height: 2px;
+                width: 100%;
+                background-color: #fff;
+                transition: 0.3s all;
+                margin-bottom: -2px;
+
+                &:nth-child(1) {
+                    transform: translateY(6px) rotate(-45deg);
+                }
+
+                &:nth-child(2) {
+                    display: none;
+                }
+
+                &:nth-child(3) {
+                    transform: translateY(6px) rotate(45deg);
+                }
+            }
+
         }
 
     }
