--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -1,11 +1,11 @@
 @keyframes showBackground {
     0% {
-        background-image: url("../img/interier/main1.jpg");
+        background-image: url("../img/interier/main3f.jpg");
 
     }
 
     33% {
-        background-image: url("../img/interier/main1.jpg");
+        background-image: url("../img/interier/main3f.jpg");
 
     }
 
