Адаптация промо+дескрипшн

--- a/src/sass/blocks/_description.scss
+++ b/src/sass/blocks/_description.scss
@@ -1,10 +1,11 @@
 .description {
+    position: relative;
     min-height: 400px;
     background: url('../img/interier/concrete3.jpg') no-repeat 100%/cover;
     box-shadow: 0px 23px 20px 25px rgba(239, 240, 185, 0.2) inset;
-    padding-bottom: 35px;
+    padding-bottom: 55px;
 
-    h2 {
+    &__title {
         color: rgb(25, 34, 28);
         text-shadow: 0 2px 2px $green_color, 2px 0 2px $green_color;
         text-align: center;
@@ -19,7 +20,7 @@
 
     &__wrapper {
         display: flex;
-        justify-content: start;
+        // justify-content: start;
         align-items: center;
         padding-top: 25px;
     }
@@ -27,9 +28,12 @@
     &__img {
         width: 450px;
         height: 600px;
-        padding-right: 10px;
+
         box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 3px rgba(239, 240, 185, 0.2);
 
+        &:nth-child(1) {
+            margin-right: 10px;
+        }
 
         img {
             width: 100%;
@@ -39,15 +43,15 @@
     }
 
     &__about {
-        width: 530px;
-        height: 250px;
+        width: 400px;
+        min-height: 250px;
         background-color: $green_color2;
         background: linear-gradient(90deg, rgba(62, 87, 17, 1) 0%, rgba(51, 68, 22, 1) 35%, rgba(27, 36, 12, 1) 100%);
         padding: 20px;
         z-index: 6;
         position: absolute;
-        right: 0;
-        top: 250px;
+        right: 0px;
+        top: 650px;
 
         &-title {
             color: azure;
