--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -1,7 +1,8 @@
 @mixin green-line {
-    width: 1000px;
+    width: 90%;
     height: 3px;
     border-radius: 50%;
     background-color: $green_color;
     margin: 30px auto;
 }
+
