--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -14,7 +14,7 @@
         width: 30%;
         height: inherit;
         display: flex;
-        justify-content: start;
+        // justify-content: start;
         align-items: center;
 
         &-img {
