--- a/src/sass/blocks/_headerMobile.scss
+++ b/src/sass/blocks/_headerMobile.scss
@@ -1,14 +1,13 @@
 .header__items__mobile {
-    // display: none;
+    position: fixed;
     padding-top: 60px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.9);
     width: 65%;
     height: 100vh;
-    position: absolute;
+    
     top: 0;
     left: -100%;
     z-index: 20;
@@ -27,16 +26,15 @@
     }
 
     &-active {
-        // display: none;
+        position: fixed;
         padding-top: 60px;
         display: flex;
         flex-direction: column;
-        justify-content: start;
         align-items: center;
         background-color: rgba(0, 0, 0, 0.9);
         width: 65%;
         height: 100vh;
-        position: absolute;
+        
         top: 0;
         left: 0%;
         z-index: 20;
