--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,16 +1,21 @@
 @media(max-height: 1366px) {
     .container {
         max-width: 1140px;
+    }
 
-        .description {
-            &__about {
-                right: 0px;
-            }
+    .description {
+        &__about {
+            right: 0px;
         }
     }
+
 }
 
 @media(max-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+
     .promo {
         &__goodMorning {
             width: 80%;
@@ -25,23 +30,25 @@
         }
     }
 
-    .container {
-        max-width: 960px;
 
-        .description {
-            &__about {
-                width: 400px;
-                min-height: 300px;
-                right: -50px;
-            }
+    .description {
+        &__about {
+            width: 400px;
+            min-height: 300px;
+            right: -50px;
         }
-
     }
+
+
 
 
 }
 
 @media(max-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
+
     .header {
         &__logo {
             width: 10%;
@@ -77,27 +84,36 @@
         }
     }
 
-    .container {
-        max-width: 720px;
 
-        .description {
-            &__about {
-                position: static;
-                top: auto;
-                right: inherit;
-                margin-top: 10px;
-                width: 100%;
-                min-height: 150px;
+    .description {
+        &__about {
+            position: static;
+            top: auto;
+            right: inherit;
+            margin-top: 10px;
+            width: 100%;
+            min-height: 150px;
 
+            &-title {
+                text-align: center;
+            }
+            &-text {
+                font-size: 18px;
             }
         }
-
     }
+
+
 
 
 }
 
 @media(max-width: 768px) {
+
+    .container {
+        max-width: 540px;
+    }
+
     .header {
         &__logo {
             width: 40%;
@@ -134,32 +150,64 @@
         }
     }
 
-    .container {
-        max-width: 540px;
 
-        .description {
-            &__title {
-                font-size: 32px;
-            }
+    .description {
+        &__title {
+            font-size: 32px;
+        }
 
-            &__wrapper {
-                justify-content: space-between;
-                padding-top: 25px;
-            }
+        &__wrapper {
+            justify-content: space-between;
+            padding-top: 25px;
+        }
 
-            &__img {
-                width: 270px;
-                height: 400px;
-                padding-right: 0;
-            }
+        &__img {
+            width: 270px;
+            height: 400px;
+            padding-right: 0;
         }
     }
+
 }
 
 @media(max-width: 576px) {
     .container {
         width: 100%;
         padding: 0 10px;
+    }
+
+    .description {
+        padding-bottom: 35px;
+        &__title {
+            font-size: 30px;
+        }
+
+        &__wrapper {
+            display: block;
+
+            padding-top: 15px;
+        }
+
+        &__img {
+            width: 100%;
+            height: 700px;
+            padding-right: 0;
+
+            &:nth-child(1) {
+                display: none;
+                visibility: hidden;
+            }
+
+            img {
+                display: block;
+                margin: 0 auto;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__about {
+            padding: 10px;
+        }
     }
 }
 
