--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,15 +1,16 @@
 .promo {
     position: relative;
-    // box-shadow: 0 10px 5px rgb(59, 59, 59);
     width: 100%;
     height: 100vh;
     // background: url("../img/interier/main1.jpg");
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6488731234681373) 0%, rgba(0, 0, 0, 0.44159021030287116) 0%, rgba(0, 0, 0, 0) 100%);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
     background-size: cover;
     animation: showBackground 18s ease infinite alternate;
     box-shadow: 0px 10px 15px rgba(239, 240, 185, 0.9);
+
 
     .icon-scroll {
         width: 20px;
@@ -60,6 +61,13 @@
             // text-transform: lowercase;
             font-size: 35px;
             text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9), -3px 3px 20px rgba(0, 0, 0, 0.9), 3px -3px 20px rgba(0, 0, 0, 0.9);
+        }
+
+        &-list {
+            li {
+                line-height: 32px;
+                text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9), -3px 3px 20px rgba(0, 0, 0, 0.9), 3px -3px 20px rgba(0, 0, 0, 0.9);
+            }
         }
     }
 }
