--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -116,7 +116,7 @@ body {
 @import 'blocks/header';
 @import 'blocks/headerMobile';
 @import 'blocks/description';
-
+@import 'blocks/novelty';
 
 
 
