--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -7,8 +7,10 @@
 }
 
 @mixin title {
-    color: rgb(25, 34, 28);
-    text-shadow: 0 2px 2px $green_color, 2px 0 2px $green_color;
+    color: rgb(222, 235, 235);
+    text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9), -3px 3px 20px rgba(0, 0, 0, 0.9), 3px -3px 20px rgba(0, 0, 0, 0.9);
+    // color: rgb(25, 34, 28);
+    // text-shadow: 0 2px 2px $green_color, 2px 0 2px $green_color;
     text-align: center;
     padding-top: 40px;
     font-size: 40px;
