--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,12 +1,13 @@
 @import 'libs/bootstrap-reboot.min';
+@import 'libs/animate.min';
 
 @import 'base/variables';
 @import 'base/mixins';
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Marmelad&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 
 
