--- a/src/sass/blocks/_description.scss
+++ b/src/sass/blocks/_description.scss
@@ -47,6 +47,7 @@
         min-height: 250px;
         background-color: $green_color2;
         background: linear-gradient(90deg, rgba(62, 87, 17, 1) 0%, rgba(51, 68, 22, 1) 35%, rgba(27, 36, 12, 1) 100%);
+        box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2);
         padding: 20px;
         z-index: 6;
         position: absolute;
