--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -20,12 +20,12 @@
 
 @keyframes showBackgroundMobile {
     0% {
-        background-image: url("../img/food/6.jpg");
+        background-image: url("../img/interier/cups.jpg");
 
     }
 
     33% {
-        background-image: url("../img/food/6.jpg");
+        background-image: url("../img/interier/cups.jpg");
 
     }
 
