--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -123,6 +123,7 @@
             width: 100%;
             top: 0px;
             left: 0px;
+            margin-top: 15px;
         }
 
         &__wrapper {
@@ -180,8 +181,11 @@
 
 
     .description {
+        background: url('../img/interier/concrete.jpg') no-repeat 100%/cover;
+        // box-shadow: none;
+        // background-attachment: none;
         &__title {
-            font-size: 32px;
+            font-size: 26px;
         }
 
         &__wrapper {
@@ -193,6 +197,19 @@
             width: 270px;
             height: 400px;
             padding-right: 0;
+        }
+    }
+
+    .novelty {
+        &__title {
+            font-size: 26px;
+            padding-top: 20px;
+        }
+
+        &__post {
+            background: url('../img/interier/concrete.jpg') no-repeat 100%/cover;
+            box-shadow: none;
+            // background-attachment: none;
         }
     }
 
@@ -215,9 +232,6 @@
     .description {
         padding-bottom: 35px;
 
-        &__title {
-            font-size: 30px;
-        }
 
         &__wrapper {
             display: block;
@@ -227,7 +241,7 @@
 
         &__img {
             width: 100%;
-            height: 700px;
+            height: 400px;
             padding-right: 0;
 
             &:nth-child(1) {
@@ -250,7 +264,9 @@
 
     .novelty {
         &__pre {
-            display: none;
+            // background: url('../img/interier/brick-thin.jpg');
+            background-attachment: scroll;
+            height: 80px;
         }
 
         &__img {
