--- a/src/sass/blocks/_novelty.scss
+++ b/src/sass/blocks/_novelty.scss
@@ -2,13 +2,11 @@
     position: relative;
 
     &__pre {
-        background: url("../img/food/novelty_background1L.jpg") no-repeat 100%/cover;
-
+        // background: url("../img/food/novelty_background1L.jpg") no-repeat 100%/cover;
+        background: url('../img/interier/brick.jpg') no-repeat 100%/cover;
         height: 300px;
         background-attachment: fixed;
     }
-
-    ;
 
     &__post {
         position: relative;
@@ -51,13 +49,13 @@
         width: 400px;
         min-height: 250px;
         background-color: rgb(249, 252, 252);
-        box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2);
+        box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2), ;
         // background: linear-gradient(90deg, rgb(243, 243, 243) 0%, rgb(228, 229, 226) 35%, rgb(203, 204, 200) 100%);
         padding: 20px;
         z-index: 6;
         position: absolute;
         left: 70px;
-        top: 1400px;
+        top: 1100px;
         border: 2px solid rgb(122, 202, 1);
 
         &-title {
