--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -58,7 +58,7 @@
         width: 40%;
         position: absolute;
         z-index: 5;
-        color: azure;
+        color: rgb(250, 255, 255);
         top: 100px;
         left: 80px;
 
