--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -119,7 +119,7 @@ body {
 @import 'blocks/headerMobile';
 @import 'blocks/description';
 @import 'blocks/novelty';
-
+@import 'blocks/promotion';
 
 
 @import 'blocks/media';
