--- a/src/sass/blocks/_promotion.scss
+++ b/src/sass/blocks/_promotion.scss
@@ -45,7 +45,7 @@
         align-items: center;
 
         &-wrapper {
-            width: 80%;
+            width: 85%;
         }
 
         &-title {
@@ -61,7 +61,7 @@
 
         &-logo {
             padding: 5px;
-            width: 20%;
+            width: 15%;
             text-align: end;
         }
     }
@@ -73,15 +73,22 @@
         font-weight: 300;
         margin-top: 10px;
     }
+
     &__footer {
+        padding-top: 20px;
+        padding-bottom: 20px;
         margin-top: 30px;
         min-height: 100px;
         background-color: rgba(0, 0, 0, 0.801);
         display: flex;
         text-align: center;
-        &-logo{
+
+
+
+        &-logo {
             width: 33%;
             margin: auto 0;
+
             &-title {
                 padding-left: 20px;
                 font-size: 48px;
@@ -89,6 +96,7 @@
                 color: white;
                 line-height: 48px;
             }
+
             &-subtitle {
                 padding-left: 20px;
                 font-size: 12px;
@@ -97,8 +105,33 @@
                 font-weight: 100;
             }
         }
+
         &-contacts {
             width: 33%;
+
+
+
+            a {
+                color: azure;
+                text-decoration: none;
+                margin-bottom: 0px;
+            }
+
+            address {
+                margin-bottom: 0px;
+            }
+
+            &-item {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                font-size: 20px;
+                text-align: left;
+                color: rgb(240, 255, 255);
+                &-descr {
+                    padding-left: 10px;
+                }
+            }
         }
     }
 }
