Главная готово. Без моб

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -120,6 +120,6 @@ body {
 @import 'blocks/description';
 @import 'blocks/novelty';
 @import 'blocks/promotion';
-
+@import 'blocks/footer';
 
 @import 'blocks/media';
