--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,14 +1,13 @@
 .footer {
     position: absolute;
-    margin-top: calc(-130px);
+    margin-top: -130px;
 
     width: 100%;
     padding: 20px 0;
-    min-height: 100px;
+    height: 130px;
     background-color: rgba(0, 0, 0, 0.801);
     display: flex;
     text-align: center;
-    transition: 2s all;
     z-index: 99;
 
     &-logo {
@@ -64,11 +63,16 @@
 
     &__powered {
         font-size: 14px;
-        color: azure;
+        
         padding-top: 1px;
         width: 33%;
         text-align: end;
         align-self: flex-end;
+        a {
+            color: azure;
+            text-decoration: none;
+        }
+        
 
         img {
 
