--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    padding-top: 60px;
+    padding-top: 50px;
     min-height: 400px;
     background: url('../img/interier/concrete.jpg') no-repeat 100%/cover;
     box-shadow: 0px 23px 20px 10px rgba(238, 240, 166, 0.10) inset;
@@ -8,6 +8,7 @@
 
     &__title {
         @include title
+
     }
 
     &__greenLine {
@@ -16,6 +17,7 @@
 
     &__container {
         background-color: rgb(249, 252, 252);
+        padding-bottom: 40px;
 
         &-title {
             font-size: 26px;
@@ -25,9 +27,10 @@
     }
 
     &__items {
+        position: relative;
         border: 3px solid rgb(130, 214, 3);
         border-bottom: none;
-        width: 95%;
+        width: 93%;
         margin-right: 0;
         margin-left: auto;
         // display: inline;
@@ -35,12 +38,14 @@
     }
 
     &__item {
+        position: relative;
         display: flex;
         justify-content: left;
         align-items: center;
         line-height: 25px;
 
         &-price {
+            font-size: 20px;
             font-weight: 500;
             width: 5%;
             text-align: right;
@@ -51,7 +56,7 @@
                 font-size: 20px;
             }
 
-            font-size: 18px;
+            font-size: 17px;
             font-weight: 500;
             // width: 85%;
             padding-left: 10px;
@@ -97,6 +102,14 @@
                 width: 25px;
             }
         }
+    }
+
+    &__greyLine {
+        width: 100%;
+        height: 1px;
+
+        background-color: grey;
+
     }
 
 
