--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -146,6 +146,108 @@
         }
     }
 
+    .menu {
+        &__item {
+            position: relative;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            line-height: 25px;
+
+            &-price {
+                font-size: 18px;
+                font-weight: 500;
+                width: 7%;
+                text-align: right;
+            }
+
+            &-descr {
+                span {
+                    font-size: 18px;
+                }
+
+                font-size: 15px;
+                font-weight: 500;
+                // width: 85%;
+                padding-left: 10px;
+            }
+
+            &-new {
+                // width: 10%;
+                padding-left: 10px;
+                animation-name: new;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+
+                img {
+                    width: 25px;
+                }
+            }
+        }
+
+        &__item-post {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            line-height: 10px;
+
+            &-price {
+                font-size: 15px;
+                font-weight: 400;
+                width: 8%;
+                text-align: right;
+            }
+
+            &-descr {
+                font-size: 13px;
+                font-weight: 400;
+                width: 85%;
+                padding-left: 10px;
+            }
+
+            &-new {
+                width: 10%;
+
+                img {
+                    width: 25px;
+                }
+            }
+        }
+
+    }
+
+    .glutenFree {
+        &::before {
+            top: 5px;
+            // transform: translateX(-50%);
+            left: -25px;
+            width: 20px;
+            height: 20px;
+
+        }
+    }
+
+    .vegan {
+        &::before {
+            top: 5px;
+            // transform: translateX(-50%);
+            left: -25px;
+            width: 20px;
+            height: 20px;
+
+        }
+    }
+
+    .sugarFree {
+        &::after {
+            top: 5px;
+            left: -50px;
+            width: 20px;
+            height: 20px;
+
+        }
+    }
+
 }
 
 @media(max-width: 768px) {
@@ -275,12 +377,123 @@
         }
     }
 
+    .menu {
+        &__item {
+            position: relative;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            padding-bottom: 5px;
+            line-height: 18px;
+
+            &-price {
+
+                font-size: 16px;
+                font-weight: 500;
+                width: 9%;
+                text-align: right;
+                align-self: flex-start;
+
+            }
+
+            &-descr {
+                span {
+                    font-size: 16px;
+                    align-self: flex-start;
+                }
+
+                font-size: 14px;
+                font-weight: 500;
+                width: 83%;
+                padding-left: 10px;
+                align-self: flex-start;
+            }
+
+            &-new {
+                // width: 10%;
+                padding-left: 5px;
+                animation-name: new;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+                align-self: flex-start;
+
+                img {
+                    width: 25px;
+                }
+            }
+        }
+
+        &__item-post {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            line-height: 10px;
+            margin-top: -5px;
+            padding-bottom: 5px;
+
+            &-price {
+                font-size: 13px;
+                font-weight: 400;
+                width: 9%;
+                text-align: right;
+            }
+
+            &-descr {
+                font-size: 11px;
+                font-weight: 400;
+                width: 85%;
+                padding-left: 10px;
+            }
+
+            &-new {
+                width: 10%;
+
+                img {
+                    width: 25px;
+                }
+            }
+        }
+
+    }
+
+    .glutenFree {
+        &::before {
+            top: 0;
+            // transform: translateX(-50%);
+            left: -20px;
+            width: 15px;
+            height: 15px;
+
+        }
+    }
+
+    .vegan {
+        &::before {
+            top: 0;
+            // transform: translateX(-50%);
+            left: -20px;
+            width: 15px;
+            height: 15px;
+
+        }
+    }
+
+    .sugarFree {
+        &::after {
+            top: 0;
+            left: -37px;
+            width: 15px;
+            height: 15px;
+
+        }
+    }
+
 }
 
 @media(max-width: 576px) {
     .container {
         width: 100%;
-        padding: 0 10px;
+        padding: 0 5px;
     }
 
     .promo {
@@ -343,6 +556,7 @@
             background-attachment: scroll;
             height: 80px;
         }
+
         &__post {
             padding-bottom: 250px;
         }
@@ -397,6 +611,7 @@
 
             &-item {
                 justify-content: center;
+
                 &-descr {
                     font-size: 14px;
                 }
@@ -413,6 +628,133 @@
             padding-right: 15px;
         }
     }
+
+    .menu {
+        padding-bottom: 260px;
+        &__container {
+            border-radius: 3px;
+            box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2) ;
+            &-title {
+
+                font-weight: 500;
+
+            }
+        }
+
+        &__items {
+            padding-top: 5px;
+
+        }
+
+        &__item {
+            position: relative;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            padding-bottom: 4px;
+            line-height: 15px;
+
+            &-price {
+
+                font-size: 14px;
+                font-weight: 500;
+                width: 12%;
+                text-align: right;
+                align-self: flex-start;
+
+            }
+
+            &-descr {
+                span {
+                    font-size: 14px;
+                    align-self: flex-start;
+                }
+
+                font-size: 12px;
+                font-weight: 500;
+                width: 80%;
+                padding-left: 5px;
+                align-self: flex-start;
+            }
+
+            &-new {
+                // width: 10%;
+                padding-left: 5px;
+                animation-name: new;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+                align-self: flex-start;
+
+                img {
+                    width: 20px;
+                }
+            }
+        }
+
+        &__item-post {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            line-height: 10px;
+            margin-top: -5px;
+            padding-bottom: 5px;
+
+            &-price {
+                font-size: 11px;
+                font-weight: 400;
+                width: 12%;
+                text-align: right;
+            }
+
+            &-descr {
+                font-size: 10px;
+                font-weight: 400;
+                width: 85%;
+                padding-left: 10px;
+            }
+
+            &-new {
+                width: 10%;
+
+                img {
+                    width: 25px;
+                }
+            }
+        }
+
+    }
+
+    .glutenFree {
+        &::before {
+            top: 0;
+            // transform: translateX(-50%);
+            left: -15px;
+            width: 10px;
+            height: 10px;
+
+        }
+    }
+
+    .vegan {
+        &::before {
+            top: 0;
+            // transform: translateX(-50%);
+            left: -15px;
+            width: 10px;
+            height: 10px;
+
+        }
+    }
+
+    .sugarFree {
+        &::after {
+            top: 0;
+            left: -27px;
+            width: 10px;
+            height: 10px;
+
+        }
+    }
 }
 
-@media(max-width: 429px) {}
+// @media(max-width: 429px) {}
