--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -7,12 +7,14 @@
     padding-bottom: 150px;
 
     &__title {
-        @include title
+        @include title;
+         padding-top: 25px;
 
     }
 
     &__greenLine {
-        @include green-line
+        @include green-line;
+        margin: 20px auto;
     }
 
     &__container {
@@ -23,6 +25,7 @@
             font-size: 26px;
             font-weight: 400;
             text-align: center;
+            line-height: 45px;
         }
     }
 
@@ -33,8 +36,7 @@
         width: 93%;
         margin-right: 0;
         margin-left: auto;
-        // display: inline;
-        // text-align: right;
+
     }
 
     &__item {
