--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -8,7 +8,7 @@
 
     &__title {
         @include title;
-         padding-top: 25px;
+        padding-top: 25px;
 
     }
 
@@ -18,6 +18,7 @@
     }
 
     &__container {
+        position: relative;
         background-color: rgb(249, 252, 252);
         padding-bottom: 40px;
 
@@ -114,5 +115,20 @@
 
     }
 
+    &__nuts {
+        padding: 10px;
+        position: absolute;
+        right: 70px;
+        bottom: 80px;
+        width: 180px;
+        height: 90px;
+        border: 3px solid rgb(190, 4, 4);
+        border-radius: 7px;
+        transform: rotateZ(345deg);
+        text-align: center;
+        font-size: 12px;
+        font-weight: 500;
+        color: black;
+    }
 
 }
