--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -159,8 +159,8 @@ body {
 @import 'blocks/novelty';
 @import 'blocks/promotion';
 @import 'blocks/footer';
-
 @import 'blocks/menu';
+@import 'blocks/drinks';
 
 
 @import 'blocks/media';
